--- a/app/Components/ProductionSection/ProductionSection.module.scss
+++ b/app/Components/ProductionSection/ProductionSection.module.scss
@@ -1,6 +1,6 @@
 .productionSection{
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 .content{
     width: 100%;
@@ -31,8 +31,7 @@
 @media (max-width: 1024px) {
     .productionSection{
         height: auto;
-        min-height: 100svh;
-        padding: 40px 0;
+        min-height: auto;
     }
 
     .content{
