--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,38 +3,36 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    gap: 80px;
+    padding-bottom: 80px;
 }
 
 .homeSection {
-    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .productionSection {
-    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .contactSection {
-    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .consultationSection {
-    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .footerSection {
@@ -44,17 +42,10 @@
 }
 
 @media (max-width: 1300px) {
-    .page {
-        gap: 80px;
-        padding-bottom: 80px;
-    }
-
     .homeSection,
     .productionSection,
     .contactSection,
     .consultationSection {
-        min-height: auto;
         height: auto;
-        align-items: flex-start;
     }
 }
